Fix svg icon IE mouse event error #39273

--- a/src/base/Icon/Icon.scss
+++ b/src/base/Icon/Icon.scss
@@ -5,6 +5,7 @@
 .cui-icon-svg {
   fill: currentColor;
   vertical-align: sub;
+  pointer-events: none;
 }
 
 .svg-close {
